# ZicoLimbo

./: Cargo.toml  README.md  package-lock.json
.github/workflows/: ci.yml  release.yml
crates/minecraft_packets/src/play/: boss_bar_packet.rs
pico_limbo/src/configuration/: boss_bar.rs  config.rs  mod.rs
pico_limbo/src/queue/: mod.rs  placeholder.rs
pico_limbo/src/server/: network.rs  start_server.rs
pico_limbo/src/server_state/: mod.rs
pterodactyl/eggs/: egg-zico-limbo--debian.json  egg-zico-limbo.json
zico_limbo/: Cargo.toml
zico_limbo/src/: lib.rs  main.rs  server_brand.rs
zico_limbo/src/configuration/: boss_bar.rs  commands.rs  compression.rs  config.rs  env_placeholders.rs  queue.rs  server_list.rs  tab_list.rs  title.rs
zico_limbo/src/configuration/world_config/: boundaries.rs  mod.rs
zico_limbo/src/forwarding/: check_bungee_cord.rs
zico_limbo/src/handlers/: configuration.rs
zico_limbo/src/handlers/login/: login_acknowledged.rs  login_start.rs
zico_limbo/src/handlers/play/: commands.rs  mod.rs  player_abilities.rs  set_player_pos.rs  set_player_position_and_rotation.rs
zico_limbo/src/handlers/status/: status_request.rs
zico_limbo/src/queue/: queue_display.rs
zico_limbo/src/server/: client_data.rs  client_state.rs  network.rs  start_server.rs
zico_limbo/src/server_state/: server_commands.rs
